--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true 
-      - run: npm install
-      - run: npm build
+      - run: npm run install
+      - run: npm run  build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
