--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-butterfly": "^4.6.1",
+    "hexo-util": "^3.0.1",
     "hexo-wordcount": "^6.0.1",
-    "live2d-widget-model-miku": "^1.0.5"
+    "live2d-widget-model-koharu": "^1.0.5"
   }
 }
